baremetal-config-report-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: baremetal-config-report-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: baremetal-config-report
    spec:
      containers:
      - name: baremetal-config-report
        image: registry.ng.bluemix.net/jonhall/baremetal-config-report:latest
        ports:
        - containerPort: 5000
