baremetal-config-report-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baremetal-config-report-service
spec:
  selector:
    app: baremetal-config-report
  ports:
    - protocol: TCP
      port: 5000
